# my-library-bot

./: .gitignore  Dockerfile  main.py  makefile  pyproject.toml
helm/my-lib-bot/: Chart.yaml  values-dev.yaml  values.yaml
helm/my-lib-bot/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/my-lib-bot/templates/tests/: test-connection.yaml
src/: main.py
src/config/: config.py
src/models/: llm.py  search.py  user_management.py
src/repositories/: mongo.py  qdrant.py
src/services/: embedding.py
src/tests/integrations/: test_mongo_repository_integration.py  test_qdrant_hybrid_search_integration.py
src/tests/units/: test_embedding_service.py  test_mongo_repository.py  test_qdrant_hybrid_search.py
