[project]
name = "my-library-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "google-cloud-secret-manager>=2.27.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pymongo>=4.17.0",
    "qdrant-client>=1.17.1",
    "uvicorn>=0.46.0",
]
